--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,9 @@ language: scala
 scala:
   - 2.12.8
   - 2.13.0
+
+script:
+  - sbt clean coverage test coverageReport
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
